cert.yml
apiVersion: v1
kind: Namespace
metadata:
  name: hello

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: hello
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts: 
    - helloworlds.example.com
    secretName: selfsigned-cert-tls
  rules:
  - host: helloworlds.example.com 
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-svc
          servicePort: 80
        
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  namespace: hello
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: hello
